--- a/css/contact.css
+++ b/css/contact.css
@@ -139,11 +139,20 @@
     }
 
     .get-in-touch__get-in-touch {
-        margin-top: 60px;
+        margin-top: 120px;
     }
 
     .get-in-touch__contact-info {
         margin-top: 30px;
+    }
+
+    .get-in-touch__faq .get-in-touch__faq-p {
+        width: 80%;
+        margin-left: 10%;
+    }
+
+    .get-in-touch__faq {
+        margin-top: 40px;
     }
 }
 
