--- a/css/servicesandrates.css
+++ b/css/servicesandrates.css
@@ -15,12 +15,6 @@
     font-weight: bolder;
 }
 
-.intro-text__quote-p .accent {
-    color: #303030;
-    font-size: 20px;
-    font-family: 'Lato', sans-serif;
-}
-
 .intro-text__subtitle {
     margin-top: 100px;
 }
@@ -29,7 +23,6 @@
     font-size: 24px;
     font-weight: 300;
     width: 70%;
-    margin-left: 12%;
     text-align: center;
 }
 
@@ -39,6 +32,13 @@
 
 .services__container img {
     max-width: 50vw;
+}
+
+.services__container .services-row-1 .col-md.services-card__text,
+.services__container .services-row-2 .col-md.pet-sitting__img,
+.services__container .services-row-3 .col-md.services-card__text {
+    padding-right: 0;
+    width: 95%;
 }
 
 .services-card__text-title {
@@ -56,7 +56,11 @@ services-card__text-lead-p a {
     font-weight: bolder;
 }
 
-.services-card__text p {
+.services__container .row {
+    margin-right: 0;
+}
+
+.services-card__text-text p {
     text-align: center;
 }
 
@@ -87,6 +91,11 @@ services-card__text-lead-p a {
 
 .three-level-rate {
     border-bottom: 2px solid #808080;
+}
+
+.services-card__rate-last,
+.three-level-rate {
+    margin-bottom: 20px;
 }
 
 .pet-sitting-mobile {
@@ -122,10 +131,14 @@ services-card__text-lead-p a {
 
     .services-row-2 .services-card-rates {
         margin-top: -145px;
-        margin-right: -140%;
         margin-bottom: 40px;
-        margin-left: 77%;
+        margin-left: 106%;
+        width: 107%;
     }
+
+    .services-row-2 .services-card-rates .services-card__rate {
+        width: 100%;
+        margin-left: 0;    }
 
     .services-row-3 .services-card-rates {
         margin-top: 75px;
@@ -152,10 +165,6 @@ services-card__text-lead-p a {
 @media only screen and (max-width: 768px) {
     .intro-text__quote-p {
         font-size: 1.25rem;
-    }
-
-    .intro-text__quote-p .accent {
-        font-size: 1rem;
     }
 
     .intro-text__subtitle-p {
@@ -188,12 +197,13 @@ services-card__text-lead-p a {
         display: block;
     }
 
-    .services-row-1 .services-card-rates {
-        margin: 0 0 30px 0;
-    }
-
+    .services-row-1 .services-card-rates,
+    .pet-sitting-mobile .services-card-rates,
     .services-row-3 .services-card-rates {
-        margin: 0 0 30px 0;
+        margin-bottom: 30px ;
+        margin-top: 0;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
     .services-card__rate {
